--- a/app/application/admin/views/scripts/head.phtml
+++ b/app/application/admin/views/scripts/head.phtml
@@ -1,21 +1,19 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
 <title><?=$this->pageTitle ?></title>
 
-<link rel="stylesheet" href="<?=App_Server::extUrl()?>/reset-backend.css" type="text/css" media="screen, projection">
-<link rel="stylesheet" href="<?=App_Server::libUrl()?>/admin/style/template.css" type="text/css" media="screen, projection">
-<link rel="stylesheet" href="<?=App_Server::libUrl()?>/admin/style/structure.css" type="text/css" media="screen" rel="stylesheet">
-<link rel="stylesheet" href="<?=App_Server::libUrl()?>/admin/style/backend.css" type="text/css" media="screen" rel="stylesheet">
+<link rel="stylesheet" href="<?=Class_Server::extUrl()?>/reset-backend.css" type="text/css" media="screen, projection">
+<link rel="stylesheet" href="<?=Class_Server::libUrl()?>/admin/style/structure.css" type="text/css" media="screen" rel="stylesheet">
+<link rel="stylesheet" href="<?=Class_Server::libUrl()?>/admin/style/backend.css" type="text/css" media="screen" rel="stylesheet">
 <?=$this->headLink() ?>
 
 <?=$this->headScript() ?>
-<script type="text/javascript" src="<?=App_Server::extUrl()?>/jub.js"></script>
-<script type="text/javascript" src="<?=App_Server::extUrl()?>/jquery.ndd.js"></script>
-<script type="text/javascript" src="<?=App_Server::extUrl()?>/ckeditor/ckeditor.js"></script>
-<script type="text/javascript" src="<?=App_Server::extUrl()?>/ajax-select-grid.js"></script>
+<script type="text/javascript" src="<?=Class_Server::extUrl()?>/jub.js"></script>
+<script type="text/javascript" src="<?=Class_Server::extUrl()?>/jquery.ndd.js"></script>
+<script type="text/javascript" src="<?=Class_Server::extUrl()?>/ckeditor/ckeditor.js"></script>
+<script type="text/javascript" src="<?=Class_Server::extUrl()?>/ajax-select-grid.js"></script>
 
-<script type="text/javascript" src="<?=App_Server::libUrl()?>/admin/script/admin.js"></script>
-<script type="text/javascript" src="<?=App_Server::libUrl()?>/admin/script/back.js"></script>
-<script type="text/javascript" src="<?=App_Server::libUrl()?>/admin/script/drag.js"></script>
+<script type="text/javascript" src="<?=Class_Server::libUrl()?>/admin/script/admin.js"></script>
+<script type="text/javascript" src="<?=Class_Server::libUrl()?>/admin/script/back.js"></script>
 
 <script>
 /************************************/
