--- a/app/application/admin/views/scripts/template.phtml
+++ b/app/application/admin/views/scripts/template.phtml
@@ -109,6 +109,6 @@ if($request->getParam('bricks') != 'disabled') {
 	<div class='content'></div>
 </div>
 
-<script data-main="<?=App_Server::libUrl()?>/admin/script/app/main" src="<?=App_Server::libUrl()?>/admin/script/app/require-jquery.js"></script>
+<script data-main="<?=Class_Server::libUrl()?>/admin/script/app/main" src="<?=Class_Server::libUrl()?>/admin/script/app/require-jquery.js"></script>
 </body>
 </html>
