--- a/app/application/layout-scripts/head.phtml
+++ b/app/application/layout-scripts/head.phtml
@@ -6,29 +6,29 @@ $csa = Class_Session_Admin::getInstance();
 <?=$this->headMeta() ?>
 <?=$this->headTitle() ?>
 
-<link href="<?=App_Server::extUrl()?>/reset.css" media="screen" rel="stylesheet" type="text/css" >
-<link href="<?=App_Server::libUrl()?>/front/style/sprite.css" media="screen" rel="stylesheet" type="text/css" >
+<link href="<?=Class_Server::extUrl()?>/reset.css" media="screen" rel="stylesheet" type="text/css" >
+<link href="<?=Class_Server::libUrl()?>/front/style/sprite.css" media="screen" rel="stylesheet" type="text/css" >
 <?php if($csa->getSessionData('localCssMode') == 'active') {?>
 <link uselocal='true' href="http://local.host/<?php echo Class_Server::getSiteFolder()?>/template.css" media="screen" rel="stylesheet" type="text/css">
 <?php } else {?>
-<link href="<?=App_Server::miscUrl()?>/template.css" media="screen" rel="stylesheet" type="text/css">
+<link href="<?=Class_Server::miscUrl()?>/template.css" media="screen" rel="stylesheet" type="text/css">
 <?php }?>
 <?=$this->headLink() ?>
 
-<script type="text/javascript" src="<?=App_Server::extUrl()?>/jub.js"></script>
+<script type="text/javascript" src="<?=Class_Server::extUrl()?>/jub.js"></script>
 <?=$this->headScript() ?>
 
 
 <?php if($csa->isLogin()) { ?>
-<link 	type="text/css" 		href="<?=App_Server::libUrl()?>/admin/style/structure.css" media="screen" rel="stylesheet">
-<link	type="text/css"			href="<?=App_Server::libUrl()?>/admin/style/front.css" media="screen" rel="stylesheet">
+<link 	type="text/css" 		href="<?=Class_Server::libUrl()?>/admin/style/structure.css" media="screen" rel="stylesheet">
+<link	type="text/css"			href="<?=Class_Server::libUrl()?>/admin/style/front.css" media="screen" rel="stylesheet">
 
-<script type="text/javascript"	src="<?=App_Server::extUrl()?>/ajax-select-grid.js"></script>
-<script type="text/javascript"	src="<?=App_Server::extUrl()?>/ckeditor/ckeditor.js"></script>
-<script type="text/javascript"	src="<?=App_Server::extUrl()?>/jquery.ndd.js"></script>
-<script type="text/javascript"	src="<?=App_Server::libUrl()?>/admin/script/bootstrap.js"></script>
-<script type="text/javascript"	src="<?=App_Server::libUrl()?>/admin/script/front.js"></script>
-<script type="text/javascript"	src="<?=App_Server::libUrl()?>/admin/script/drag.js"></script>
+<script type="text/javascript"	src="<?=Class_Server::extUrl()?>/ajax-select-grid.js"></script>
+<script type="text/javascript"	src="<?=Class_Server::extUrl()?>/ckeditor/ckeditor.js"></script>
+<script type="text/javascript"	src="<?=Class_Server::extUrl()?>/jquery.ndd.js"></script>
+<script type="text/javascript"	src="<?=Class_Server::libUrl()?>/admin/script/bootstrap.js"></script>
+<script type="text/javascript"	src="<?=Class_Server::libUrl()?>/admin/script/front.js"></script>
+<script type="text/javascript"	src="<?=Class_Server::libUrl()?>/admin/script/drag.js"></script>
 
 <script>
 /************************************/
@@ -44,7 +44,7 @@ var WB;
 var FINDER;
 var EventMessenger = {};
 _.extend(EventMessenger, Backbone.Events);
-var FILE_SERVER = "<?=App_Server::miscUrl()?>";
+var FILE_SERVER = "<?=Class_Server::miscUrl()?>";
 </script>
 <?php } ?>
 </head>
