add roll effect

--- a/app/application/layout-scripts/head.phtml
+++ b/app/application/layout-scripts/head.phtml
@@ -29,6 +29,7 @@ $csa = Class_Session_Admin::getInstance();
 <script type="text/javascript"	src="<?=Class_Server::libUrl()?>/admin/script/bootstrap.js"></script>
 <script type="text/javascript"	src="<?=Class_Server::libUrl()?>/admin/script/front.js"></script>
 <script type="text/javascript"	src="<?=Class_Server::libUrl()?>/admin/script/drag.js"></script>
+<script type="text/javascript"	src="<?=Class_Server::libUrl()?>/admin/script/impact.js"></script>
 
 <script>
 /************************************/
