--- a/app/application/admin/views/scripts/head.phtml
+++ b/app/application/admin/views/scripts/head.phtml
@@ -14,7 +14,7 @@
 
 <script type="text/javascript" src="<?=Class_Server::libUrl()?>/admin/script/admin.js"></script>
 <script type="text/javascript" src="<?=Class_Server::libUrl()?>/admin/script/back.js"></script>
-
+<script type="text/javascript" src="<?=Class_Server::libUrl()?>/script/links-admin.js"></script>
 <script>
 /************************************/
 /*Declear Global Javascript Items****/
