--- a/app/application/admin/views/scripts/template-front.phtml
+++ b/app/application/admin/views/scripts/template-front.phtml
@@ -2,7 +2,7 @@
 	<div class='head'>
 		<?php echo $this->head?>
 	</div>
-	<?php echo $this->tabLinks()?>
+	<?//php echo $this->tabLinks()?>
 </div>
 <div class='breadcrumb'>
 	<?php
