--- a/app/application/admin/views/scripts/system/index.phtml
+++ b/app/application/admin/views/scripts/system/index.phtml
@@ -7,16 +7,15 @@
 	<a href='/admin/group/list/type/file'>文件分组</a>
 </div>
 
-<div class='section'>
+<!-- div class='section'>
 	<div class='title'>管理员</div>
 	<a href='/admin/admin/index'>管理员列表</a>
 	<a href='/admin/acl/index'>权限分组</a>
-	<!-- a href='#/admin/system/file'>查看文件</a -->
-</div>
+</div -->
 
 <div class='section'>
 	<div class='title'>系统文件</div>
-	<a href='/admin/file'>查看系统文件[包括css，js，背景图等。请勿随意删除]</a>
+	<!-- a href='/admin/file'>查看系统文件[包括css，js，背景图等。请勿随意删除]</a -->
 	<a href='/admin/system/clear-all-cache'>清除全部缓存文件</a>
 </div>
 
