--- a/extension/brick/Admin/Menu/view.phtml
+++ b/extension/brick/Admin/Menu/view.phtml
@@ -1,3 +1,4 @@
+<?php $csa = Class_Session_Admin::getInstance();?>
 <div class='toolbar'>
 	<div class='main'>
 		<ul class='left'>
@@ -7,13 +8,14 @@
 			<?php echo $this->aclLink('ad', 'index', '广告管理')?>
 			<?php echo $this->aclLink('message-pattern', 'index', '编辑问卷')?>
 			<?php echo $this->aclLink('message', 'index', '用户反馈')?>
-			<?php echo $this->aclLink('file', 'list', '文件管理')?>
 			<?php echo $this->aclLink('system', 'index', '系统')?>
 			<?php echo $this->aclLink('brick', 'index', '模块管理')?>
+			<li><a href='http://file.eo.test/admin/<?php echo $csa->getOrgCode()?>' target='_blank'>文件管理</a></li>
+			<li><a href='http://forum.enorange.com/admin/<?php echo $csa->getOrgCode()?>' target='_blank'>用户留言</a></li>
 		</ul>
 		<ul class='right'>
-			<li><a href='/admin/account'>我的账户</a></li>
-			<li><a href='/admin/index/logout'>退出后台</a></li>
+			<li><a href='http://sso.enorange.com/admin/account'>我的账户</a></li>
+			<li><a href='http://sso.enorange.com/admin/index/logout'>退出后台</a></li>
 		</ul>
 	</div>
 	<div class='sub'></div>
