change local url to flexi url

--- a/extension/brick/Admin/Menu/view.phtml
+++ b/extension/brick/Admin/Menu/view.phtml
@@ -10,7 +10,7 @@
 			<?php echo $this->aclLink('message', 'index', '用户反馈')?>
 			<?php echo $this->aclLink('system', 'index', '系统')?>
 			<?php echo $this->aclLink('brick', 'index', '模块管理')?>
-			<li><a href='http://file.eo.test/admin/<?php echo $csa->getOrgCode()?>' target='_blank'>文件管理</a></li>
+			<li><a href='<?php Class_Server::getFileServer()?>/admin/<?php echo $csa->getOrgCode()?>' target='_blank'>文件管理</a></li>
 			<li><a href='http://forum.enorange.com/admin/<?php echo $csa->getOrgCode()?>' target='_blank'>用户留言</a></li>
 		</ul>
 		<ul class='right'>
