--- a/app/application/admin/views/scripts/system/index.phtml
+++ b/app/application/admin/views/scripts/system/index.phtml
@@ -1,10 +1,13 @@
 <div class='section'>
 	<div class='title'>网站结构</div>
 	<a href='/admin/site/'>网站基本信息</a>
+	<hr />
 	<a href='/admin/group/list/type/article'>文章分组</a>
 	<a href='/admin/group/list/type/product'>产品分组</a>
 	<a href='/admin/group/list/type/ad'>广告分组</a>
 	<a href='/admin/group/list/type/file'>文件分组</a>
+	<hr />
+	<a href='/admin/product-type/'>产品类型</a>
 </div>
 
 <!-- div class='section'>
