--- a/app/application/admin/views/scripts/artical/edit.phtml
+++ b/app/application/admin/views/scripts/artical/edit.phtml
@@ -13,7 +13,7 @@
 <?php } ?>
 
 <?=$this->form?>
-<fieldset class='attachment-form'>
+<!-- fieldset class='attachment-form'>
 	<legend>附件</legend>
 	<ul id='attachment-list'>
 		<?foreach($this->attachmentRowset as $row) {?>
@@ -21,7 +21,7 @@
 		<?} ?>
 	</ul>
 	<button class="append-attachment" type="button" name="appendAttachment">添加附件</button>
-</fieldset>
+</fieldset -->
 <div class='clear'></div>
 
 <script type="text/javascript">
