--- a/app/application/layout-scripts/head.phtml
+++ b/app/application/layout-scripts/head.phtml
@@ -25,7 +25,7 @@ $csa = Class_Session_Admin::getInstance();
 <script type="text/javascript"	src="<?=Class_Server::extUrl()?>/ckeditor/ckeditor.js"></script>
 <script type="text/javascript"	src="<?=Class_Server::libUrl()?>/front/script/impact.js"></script>
 
-	<?php if(APP_ENV == 'development') {?>
+	<?php if(true) {?>
 <script type="text/javascript"	src="<?=Class_Server::extUrl()?>/jquery.ndd.js"></script>
 <script type="text/javascript"	src="<?=Class_Server::libUrl()?>/script/front.js"></script>
 <script type="text/javascript"	src="<?=Class_Server::libUrl()?>/script/lightbox.js"></script>
