--- a/app/application/layout-scripts/head.phtml
+++ b/app/application/layout-scripts/head.phtml
@@ -30,6 +30,7 @@ $csa = Class_Session_Admin::getInstance();
 <script type="text/javascript"	src="<?=Class_Server::libUrl()?>/script/front.js"></script>
 <script type="text/javascript"	src="<?=Class_Server::libUrl()?>/script/lightbox.js"></script>
 <script type="text/javascript"	src="<?=Class_Server::libUrl()?>/script/links.js"></script>
+<script type="text/javascript"	src="<?=Class_Server::libUrl()?>/script/icon-selector.js"></script>
 <script type="text/javascript"	src="<?=Class_Server::libUrl()?>/script/bootstrap.js"></script>
 	<?php } else {?>
 <script type="text/javascript"	src="<?=Class_Server::libUrl()?>/front/script/minified.js"></script>	
@@ -50,6 +51,8 @@ var FINDER;
 var EventMessenger = {};
 _.extend(EventMessenger, Backbone.Events);
 var FILE_SERVER = "<?=Class_Server::miscUrl()?>";
+
+window.ORG_CODE = "<?php echo Class_Server::getOrgCode()?>";
 </script>
 <?php } ?>
 </head>
