--- a/extension/brick/Admin/Menu/view.phtml
+++ b/extension/brick/Admin/Menu/view.phtml
@@ -14,8 +14,8 @@
 			<li><a href='http://forum.enorange.com/admin/<?php echo $csa->getOrgCode()?>' target='_blank'>用户留言</a></li>
 		</ul>
 		<ul class='right'>
-			<li><a href='http://sso.enorange.com/admin/account'>我的账户</a></li>
-			<li><a href='http://sso.enorange.com/admin/index/logout'>退出后台</a></li>
+			<li><a target='_blank' href='http://account.enorange.cn/<?php echo $csa->getUserId()?>/user/'>我的账户</a></li>
+			<li><a href='http://sso.enorange.cn/sso/logout'>退出后台</a></li>
 		</ul>
 	</div>
 	<div class='sub'></div>
