--- a/app/application/default/views/scripts/pagination-control.en.phtml
+++ b/app/application/default/views/scripts/pagination-control.en.phtml
@@ -32,7 +32,7 @@
 		<?if (isset($this->previous)) { ?>
 			<a href="/<?php echo $layoutRow->controllerName.'/page'.$this->previous ?>.shtml">&lt; pre</a> |
 		<?} else { ?>
-			<span class="disabled">&lt; last</span> |
+			<span class="disabled">&lt; first</span> |
 		<?} ?>
 		
 		<!-- Numbered page links -->
