--- a/extension/brick/Admin/Menu/view.phtml
+++ b/extension/brick/Admin/Menu/view.phtml
@@ -6,7 +6,7 @@
 			<?php echo $this->aclLink('artical', 'index', '内容管理')?>
 			<?php echo $this->aclLink('product', 'index', '产品管理')?>
 			<?php echo $this->aclLink('ad', 'index', '广告管理')?>
-			<?php echo $this->aclLink('user', 'index', '网络用户')?>
+			<?php// echo $this->aclLink('user', 'index', '网络用户')?>
 			<?php echo $this->aclLink('system', 'index', '系统')?>
 			<?php echo $this->aclLink('brick', 'index', '模块管理')?>
 			<li><a href='<?php echo Class_Server::getFileServer()?>/admin/<?php echo $csa->getOrgCode()?>' target='_blank'>文件管理</a></li>
