--- a/extension/brick/Admin/Menu/view.phtml
+++ b/extension/brick/Admin/Menu/view.phtml
@@ -9,7 +9,7 @@
 			<?php echo $this->aclLink('user', 'index', '网络用户')?>
 			<?php echo $this->aclLink('system', 'index', '系统')?>
 			<?php echo $this->aclLink('brick', 'index', '模块管理')?>
-			<li><a href='<?php echo Class_Server::getFileServer()?>/<?php echo $csa->getOrgCode()?>/admin/' target='_blank'>文件管理</a></li>
+			<li><a href='http://file.enorange.cn/<?php echo $csa->getOrgCode()?>/admin/' target='_blank'>文件管理</a></li>
 			<li><a href='http://forum.enorange.cn/<?php echo $csa->getOrgCode()?>/admin/' target='_blank'>用户留言</a></li>
 			<li><a href='http://form.enorange.cn/<?php echo $csa->getOrgCode()?>/admin/' target='_blank'>问卷系统</a></li>
 		</ul>
