--- a/app/application/layout-scripts/head.phtml
+++ b/app/application/layout-scripts/head.phtml
@@ -16,6 +16,7 @@ $csa = Class_Session_Admin::getInstance();
 <?=$this->headLink() ?>
 
 <script type="text/javascript" src="<?=Class_Server::extUrl()?>/jub.js"></script>
+<script type="text/javascript" src="<?=Class_Server::extUrl()?>/func.js"></script>
 <script type="text/javascript"	src="<?=Class_Server::libUrl()?>/front/script/front-effect.js"></script>
 <script type="text/javascript"	src="<?=Class_Server::libUrl()?>/front/script/impact.js"></script>
 <?=$this->headScript() ?>
