--- a/app/application/layout-scripts/template.phtml
+++ b/app/application/layout-scripts/template.phtml
@@ -2,6 +2,7 @@
 $csa = Class_Session_Admin::getInstance();
 $cbc = Class_Brick_Controller::getInstance();
 $HTML_ARR = $cbc->renderAll();
+
 //execute all the bircks before output the layout, in case change title or linkes are required
 
 $layoutFront = Class_Layout_Front::getInstance();
@@ -26,36 +27,46 @@ if($csa->hasPrivilege()) {
 	</div>
 </div>
 <?php }?>
-<div class='body_main_frame' layoutId='<?php echo $layoutRow->id?>'>
+
+<div class='body_main_frame' layoutId='<?php echo $layoutRow->getId()?>'>
 
 <?//=$HTML?>
 
 <?php
-	$table = new Zend_Db_Table('layout_stage');
-	$rowset = $table->fetchAll($table->select()->where('layoutId = ?', $layoutRow->id)
-		->order('sort'));
-	foreach($rowset as $row) {
+//	$table = new Zend_Db_Table('layout_stage');
+//	$rowset = $table->fetchAll($table->select()->where('layoutId = ?', $layoutRow->id)
+//		->order('sort'));
+		
+		
+		
+//	$co = App_Factory::_m('Layout');
+//	$doc = $co->find('4fd2eb003aad534462010000');
+	$rowset = $layoutRow->stage;
+	if(!is_null($rowset)) {
+		foreach($rowset as $row) {
 ?>
-<div<?php echo $row->uniquId == null ? " " : " id='".$row->uniquId."'"?> class='stage' type='<?php echo $row->type?>' stage-id='<?php echo $row->id?>' sort='<?php echo $row->sort?>'>
+<div<?php echo is_null($row['uniquId']) ? " " : " id='".$row['uniquId']."'"?> class='stage' type='<?php echo $row['type']?>' stage-id='<?php echo $row['stageId']?>'>
 <?php
-$typeArr = explode('-', $row->type);
-foreach($typeArr as $key => $spriteType) {
-	$spriteName = $row->id.'-'.$key;
+			$typeArr = explode('-', $row['type']);
+			foreach($typeArr as $key => $spriteType) {
+				$spriteName = $row['stageId'].'-'.$key;
 ?>
-	<div<?php echo $row->uniquId == null ? " " : " id='".$row->uniquId."-$key'"?> stage-id='<?php echo $row->id?>' sprite-name='<?php echo $spriteName?>' class='sprite grid-<?php echo $spriteType?>'>
+	<div<?php is_null($row['uniquId']) ? " " : " id='".$row['uniquId']."-$key'"?> stage-id='<?php echo $row['stageId']?>' sprite-name='<?php echo $spriteName?>' class='sprite grid-<?php echo $spriteType?>'>
 	<?php if(array_key_exists($spriteName, $HTML_ARR)) { ?>
 	<?php echo $HTML_ARR[$spriteName]?>
 	<?php } ?>
 	</div>
 <?php	
-}
+			}
 ?>
 	<div class='clear'></div>
 </div>
 <?php
+		}
 	}
 ?>
 </div>
+
 <div id='body_tail'>
 	<div class='sprite body_tail' sprite-name="body_tail" stage-id="0">
 		<?php echo array_key_exists('body_tail', $HTML_ARR) ? $HTML_ARR['body_tail'] : "" ?>
