--- a/extension/brick/Admin/Menu/view.phtml
+++ b/extension/brick/Admin/Menu/view.phtml
@@ -3,7 +3,7 @@
 	<div class='main'>
 		<ul class='left'>
 			<?php echo $this->aclLink('category-section', 'index', '目录组')?>
-			<?php echo $this->aclLink('artical', 'index', '内容管理')?>
+			<li><a href='/admin/artical/index' >内容管理</a></li>
 			<?php echo $this->aclLink('product', 'index', '产品管理')?>
 			<?php echo $this->aclLink('ad', 'index', '广告管理')?>
 			<?php echo $this->aclLink('user', 'index', '网络用户')?>
