--- a/app/application/admin/views/scripts/template.phtml
+++ b/app/application/admin/views/scripts/template.phtml
@@ -6,7 +6,7 @@ $controllerName = $request->getControllerName();
 $naviArr = array(
 	array('title' => '目录导航', 'url' =>'/admin/navi/'),
 	array('title' => '内容管理', 'url' => '/admin/article/'),
-	array('title' => '内容管理', 'url' => '/admin/book/'),
+	array('title' => '手册管理', 'url' => '/admin/book/'),
 	array('title' => '产品管理', 'url' => '/admin/product/'),
 	array('title' => '用户管理', 'url' => '/admin/user/'),
 	array('title' => '系统管理', 'url' => '/admin/system/'),
