--- a/app/application/admin/views/scripts/book/edit.phtml
+++ b/app/application/admin/views/scripts/book/edit.phtml
@@ -4,4 +4,49 @@
 <?php }?>
 
 
-<?php echo $this->book->renderPages()?>
+<?php //echo $this->book->renderPages()?>
+
+<div class='container-bg'>
+	<ul class='container'>
+		<li class='drop-to-sort'></li>
+	</ul>
+</div>
+
+<div id='save-book-sort'>SAVE SORT</div>
+
+<script>
+$('#save-book-sort').click(function() {
+	
+	var bookpages = $('.bookpage-item');
+	var pageSortJsonStr = '{';
+	bookpages.each(function(i, page) {
+//		console.log($(page).attr('id') + ' => ' + $(page).attr('parent-id'));
+		pageSortJsonStr += '"' + $(page).attr('id') +'":{"parentId":"'+$(page).attr('parent-id')+'", "sort":' + i + '},';
+	});
+	pageSortJsonStr = pageSortJsonStr.substring(0, pageSortJsonStr.length - 1);
+	pageSortJsonStr += '}';
+	
+	$.ajax({
+		url: '/admin/book/page-sort/',
+		data: 'pageSortJsonStr=' + pageSortJsonStr,
+		type: 'post',
+		success: function(json) {
+//			console.log('ok');
+		}
+	});
+	
+});
+</script>
+
+<script data-main="<?=Class_Server::libUrl()?>/admin/script/app/bookpage" src="<?=Class_Server::extUrl()?>/require-jquery.js"></script>
+
+<script type='text/template' id='bookpage-item-template'>
+	<div class='page-line'>
+		<div class='drag-handle' draggable='true'></div>
+		<div class='page-label'>{{ label }} ({{ link }})</div>
+		<div class='clear'></div>
+	</div>
+	<ul class='children'>
+		<li class='drop-to-sort' parent-id='{{ id }}'></li>
+	</ul>
+</script>
