--- a/extension/brick/Front/Search/view.phtml
+++ b/extension/brick/Front/Search/view.phtml
@@ -2,6 +2,10 @@
 	<?=$this->title()?>
 	<form action='/search/' method='get'>
 		<input class='text' type='text' name='keywords' value='' />
+		<select class='search-type' name='type'>
+			<option value='article'>文章</option>
+			<option value='prodcut'>产品</option>
+		</select>
 		<input class='submit' type='submit' name='submit' value='搜索' />
 	</form>
 </div>
